Respond to user feedback -- Fix code color in dark mode based on `/repositories/entry-repository`

--- a/public/css/torchlight.css
+++ b/public/css/torchlight.css
@@ -21,7 +21,6 @@
     }
 
     :not(pre, p, li, figcaption, table *, h2, h3, h4) > code {
-        background-color: #e7ecf1;
         border-radius: .25rem;
         font-size: 15px;
         padding: 1px 2px;
